[gd_scene load_steps=2 format=2]

[ext_resource path="res://battle_field_ui.gd" type="Script" id=1]

[node name="BattleFieldUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 192.0
margin_bottom = 60.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitDisplay" type="RichTextLabel" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 1860.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 60.0
color = Color( 0, 0, 0, 1 )

[node name="RollDisplay" type="RichTextLabel" parent="ColorRect2"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
